--- a/src/app/modules/shared/components/header/header.component.html
+++ b/src/app/modules/shared/components/header/header.component.html
@@ -2,8 +2,13 @@
   <nav class="navbar navbar-expand-lg navbar-light">
     <div class="container-fluid">
       <div class="logo-section d-flex boxGreen">
-        <a class="toggleMenu" data-bs-toggle="offcanvas" data-bs-target="#offcanvasRight"
-          aria-controls="offcanvasRight">
+        <a 
+          class="toggleMenu" 
+          data-bs-toggle="offcanvas" 
+          data-bs-target="#offcanvasRight" 
+          aria-controls="offcanvasWithBackdrop"
+          aria-controls="offcanvasRight" 
+        >
           <span class="navbar-toggler-icon"></span>
         </a>
         <a class="navbar-brand" href="#">
@@ -43,10 +48,9 @@
                   class="dropdown-menu" 
                   aria-labelledby="dropdownMenuButton1" 
                   (click)="toggleMenu()"  
-                  [ngClass]="isShowMenu ? 'show' : ''"
+                  [ngClass]="isShowMenu ? 'show' : 'hide-sm'"
                 >
-                  <li><button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas"
-                      aria-label="Close"></button></li>
+                  <li><button type="button" class="btn-close text-reset"></button></li>
                   <li class="p-3">
                     <div class="d-flex flex-column border-bottom border-dark align-items-center">
                       <div class="userProfile">
@@ -176,10 +180,20 @@
 
 
 <!-- Side Menu -->
-<div class="offcanvas offcanvas-{{userLanguage === 'ar' ? 'end' : 'start'}} sideManuPanel" data-bs-backdrop="false"
-  tabindex="-1" id="offcanvasRight" aria-labelledby="offcanvasRightLabel">
+<div 
+  class="offcanvas offcanvas-{{userLanguage === 'ar' ? 'end' : 'start'}} sideManuPanel" 
+  tabindex="-1" 
+  id="offcanvasRight" 
+  aria-labelledby="offcanvasRightLabel" 
+  >
   <div class="offcanvas-header">
-    <button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+    <button        
+      type="button" 
+      class="btn-close text-reset" 
+      aria-label="Close"
+      data-bs-dismiss="offcanvas" 
+    >
+  </button>
   </div>
   <div class="offcanvas-body">
     <form class="d-flex position-relative mt-3">
@@ -198,4 +212,10 @@
       </li>
     </ul>
   </div>
+</div>
+
+<div class="overlay" 
+  (click)="toggleMenu()"  
+  [ngClass]="isShowMenu ? 'show-overlay' : 'hide-overlay'"
+  >
 </div>
