--- a/src/app/modules/shared/components/header/header.component.html
+++ b/src/app/modules/shared/components/header/header.component.html
@@ -210,6 +210,33 @@
       <li class="nav-item">
         <a class="nav-link py-2" href="#">اسم النظام هنا اسم النظام هنا <span class="addBookmark mx-2"></span></a>
       </li>
+      <li class="nav-item">
+        <a class="nav-link py-2" href="#">اسم النظام هنا اسم النظام هنا</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link py-2" href="#">اسم النظام هنا اسم النظام هنا</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link py-2" href="#">اسم النظام هنا اسم النظام هنا</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link py-2" href="#">اسم النظام هنا اسم النظام هنا</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link py-2" href="#">اسم النظام هنا اسم النظام هنا</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link py-2" href="#">اسم النظام هنا اسم النظام هنا</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link py-2" href="#">اسم النظام هنا اسم النظام هنا</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link py-2" href="#">اسم النظام هنا اسم النظام هنا</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link py-2" href="#">اسم النظام هنا اسم النظام هنا</a>
+      </li>
     </ul>
   </div>
 </div>
